# allocator

./: .gitignore  CMakeLists.txt  README.md  TODO.md  allocator.c  allocator.h  allocator_benchmark.c  events.json  main.c  pool_allocator.c  pool_allocator.h  preamble.h  slab_allocator.c  slab_allocator.h  stack_allocator.c  stack_allocator.h  system_allocator.c  system_allocator.h  temp.md
scripts/: plot_benchmark_results.py
src/: allocation_hooks.h  allocation_log.json  allocator_base.h  allocator_system.h  allocators.h  arena.h  events.json  index.css  index.html  index.js  main  main.c
src/main.dSYM/Contents/Resources/DWARF/: main
tests/: expect_failure.cmake  test_allocator_misuse.c  test_allocator_suite.c  test_support.h
